canary-deploy.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: canary
    tier: server
  name: canary
spec:
  containers:
  - image: vinhut/simple-kube-app:base
    resources:
      requests:
        cpu: 100m
        memory: 100Mi
    readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 5
    livenessProbe:
      httpGet:
        path: /health
        port: 80
        httpHeaders:
          - name: X-Custom-Header
            value: Test
      initialDelaySeconds: 25
      periodSeconds: 5
    name: canary
